fix: fixing z-index and postion relative

--- a/src/scss/pages/_header.scss
+++ b/src/scss/pages/_header.scss
@@ -1,18 +1,21 @@
 .header {
+  position: relative;
   background-color: var(--black-color);
 
+  z-index: 2;
   &__container {
-    position: relative;
-    padding: 1em;
+    padding: 0.5em 1em;
     background-color: var(--white-color);
     box-shadow: var(--box-shadow);
-    z-index: 2;
 
     display: flex;
     justify-content: space-between;
     align-items: center;
 
     @media screen and (min-width: 1400px) {
+      padding: 0.5em 3em 0.5em 1em;
+
+      position: relative;
       top: 2em;
     }
   }
@@ -61,6 +64,8 @@
 
   &__nav {
     @media screen and (max-width: 768px) {
+      z-index: -1;
+
       position: absolute;
       top: 0;
       left: 0;
@@ -92,9 +97,9 @@
     }
   }
   &__nav--active {
-    transform: translateY(60%);
+    transform: translateY(50%);
     background-color: var(--white-color);
-    z-index: 1;
+    // background-color: lawngreen;
   }
   &__close {
     @media screen and (min-width: 768px) {
